[gd_scene load_steps=4 format=3 uid="uid://ciwyjrmvk65lj"]

[ext_resource type="Script" path="res://addons/richtext2/richer_text_label.gd" id="1_73h5t"]
[ext_resource type="Script" path="res://Code/UI/result_screen.gd" id="1_cr77c"]
[ext_resource type="Script" path="res://Code/wrappers/sy_button.gd" id="3_okcdb"]

[node name="ResultScreen" type="PanelContainer"]
process_mode = 2
z_index = 3000
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"ResultScreenPanel"
script = ExtResource("1_cr77c")
id = "result_screen"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
process_mode = 2
layout_mode = 2

[node name="spacer" type="Control" parent="VBoxContainer"]
process_mode = 2
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="result_title" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
process_mode = 2
clip_contents = false
custom_minimum_size = Vector2(0, 23)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/bold_italics_font_size = 16
theme_override_font_sizes/italics_font_size = 16
theme_override_font_sizes/mono_font_size = 16
theme_override_font_sizes/normal_font_size = 16
theme_override_font_sizes/bold_font_size = 16
bbcode_enabled = true
fit_content = true
script = ExtResource("1_73h5t")
bbcode = "result_screen"
effects = 2
alignment = 1
color = Color(1, 1, 1, 1)
emoji_scale = 1.0
font = ""
font_auto_setup = true
font_size = 16
font_bold_weight = 1.5
font_italics_slant = 0.25
font_italics_weight = -0.25
shadow_enabled = false
shadow_offset = 0.08
shadow_alpha = 0.25
shadow_outline_size = 0.1
outline_size = 0
outline_mode = 1
outline_adjust = 0.8
outline_hue_adjust = 0.0125
nicer_quotes_enabled = true
nicer_quotes_format = "“%s”"
markdown_enabled = true
markdown_format_bold = "[b]%s[]"
markdown_format_italics = "[i]%s[]"
markdown_format_bold_italics = "[bi]%s[]"
markdown_format_highlight = "[green;sin]%s[]"
markdown_format_bold2 = "[b]*%s*[]"
markdown_format_italics2 = "[i;gray]*%s*[]"
markdown_format_bold_italics2 = "%s"
context_enabled = true
context_path = NodePath("/root/State")
context_state = {}
context_rich_objects = true
context_rich_ints = true
context_rich_array = true
autostyle_numbers = true
autostyle_numbers_tag = "[salmon]%s[]"
autostyle_numbers_pad_decimals = true
autostyle_numbers_decimals = 2
autostyle_emojis = true
effect_weight = 0.0
meta_auto_https = true
meta_cursor = 2
override_bbcodeEnabled = true
override_clipContents = false
override_fitContent = true
fit_width = false
fit_width_padding = 10

[node name="spacer2" type="Control" parent="VBoxContainer"]
process_mode = 2
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="text" type="HBoxContainer" parent="VBoxContainer"]
process_mode = 2
layout_mode = 2
size_flags_vertical = 3

[node name="spacer" type="Control" parent="VBoxContainer/text"]
process_mode = 2
custom_minimum_size = Vector2(450, 0)
layout_mode = 2

[node name="result_text" type="RichTextLabel" parent="VBoxContainer/text"]
unique_name_in_owner = true
process_mode = 2
clip_contents = false
custom_minimum_size = Vector2(0, 23)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/bold_italics_font_size = 16
theme_override_font_sizes/italics_font_size = 16
theme_override_font_sizes/mono_font_size = 16
theme_override_font_sizes/normal_font_size = 16
theme_override_font_sizes/bold_font_size = 16
bbcode_enabled = true
fit_content = true
script = ExtResource("1_73h5t")
bbcode = "result_text"
effects = 2
alignment = 1
color = Color(1, 1, 1, 1)
emoji_scale = 1.0
font = ""
font_auto_setup = true
font_size = 16
font_bold_weight = 1.5
font_italics_slant = 0.25
font_italics_weight = -0.25
shadow_enabled = false
shadow_offset = 0.08
shadow_alpha = 0.25
shadow_outline_size = 0.1
outline_size = 0
outline_mode = 1
outline_adjust = 0.8
outline_hue_adjust = 0.0125
nicer_quotes_enabled = true
nicer_quotes_format = "“%s”"
markdown_enabled = true
markdown_format_bold = "[b]%s[]"
markdown_format_italics = "[i]%s[]"
markdown_format_bold_italics = "[bi]%s[]"
markdown_format_highlight = "[green;sin]%s[]"
markdown_format_bold2 = "[b]*%s*[]"
markdown_format_italics2 = "[i;gray]*%s*[]"
markdown_format_bold_italics2 = "%s"
context_enabled = true
context_path = NodePath("/root/State")
context_state = {}
context_rich_objects = true
context_rich_ints = true
context_rich_array = true
autostyle_numbers = true
autostyle_numbers_tag = "[salmon]%s[]"
autostyle_numbers_pad_decimals = true
autostyle_numbers_decimals = 2
autostyle_emojis = true
effect_weight = 0.0
meta_auto_https = true
meta_cursor = 2
override_bbcodeEnabled = true
override_clipContents = false
override_fitContent = true
fit_width = false
fit_width_padding = 10

[node name="spacer2" type="Control" parent="VBoxContainer/text"]
process_mode = 2
custom_minimum_size = Vector2(450, 0)
layout_mode = 2

[node name="button" type="HBoxContainer" parent="VBoxContainer"]
process_mode = 2
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 40

[node name="btn_result_return" type="Button" parent="VBoxContainer/button"]
unique_name_in_owner = true
process_mode = 3
clip_contents = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "btn_result_return"
text_overrun_behavior = 1
script = ExtResource("3_okcdb")
id = "btn_result_return"
send_clear = true

[node name="btn_result_retry" type="Button" parent="VBoxContainer/button"]
unique_name_in_owner = true
process_mode = 3
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "btn_result_retry"
text_overrun_behavior = 1
script = ExtResource("3_okcdb")
id = "btn_result_retry"
send_clear = true

[node name="spacer3" type="Control" parent="VBoxContainer"]
process_mode = 2
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
